--- a/_config.yml
+++ b/_config.yml
@@ -83,8 +83,8 @@ author:
   name             : "Qiaofei Wu"
   avatar           : "profile.jpg"
   bio              : ｜ 
-                     "Assistant Professor“
-                     ”Beijing Normal University"
+                     Assistant Professor
+                     Beijing Normal University
   location         : "Beijing, China"
   employer         : 
   pubmed           :
