--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,7 @@ analytics:
 author:
   name             : "Qiaofei Wu"
   avatar           : "profile.jpg"
-  bio              : ｜ 
-                     Assistant Professor
-                     Beijing Normal University
+  bio              : "Assistant Professor, Beijing Normal University"
   location         : "Beijing, China"
   employer         : 
   pubmed           :
