--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ main:
     url: /cv/
         
   - title: "Admission"
-    url: /Admission/
+    url: /admission/
 
   # - title: "Portfolio"
   #   url: /portfolio/
