--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Qiaofei Wu"
+title                    : "Qiaofei (Jovi) Wu"
 title_separator          : "-"
 name                     : &name "Qiaofei Wu"
 description              : &description "Ph.D. Candidate"
